--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "axios": "^1.7.9"
+    "axios": "^1.7.9",
+    "fuse.js": "^7.1.0"
   },
   "bin": {
     "albion-prices": "./index.js"
